load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "gen_update",
    out = "update.sh",
    content = [
        "#!/usr/bin/env bash",
        "cd $BUILD_WORKSPACE_DIRECTORY",
        "cp -fv bazel-everest-utils/external/everest-testing_pip_deps/requirements.bzl requirements.bzl",
    ],
)

sh_binary(
    name = "vendor_requirements",
    srcs = ["update.sh"],
    data = ["@everest-testing_pip_deps//:requirements.bzl"],
)