[metadata]
name = everest-coverage
version = attr: remove_unnecessary_files.__version__
author = Maaike Zijderveld
author_email = maaike@pionix.de
description = Utilities for coverage generation / cleanup
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/EVerest/everest-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
install_requires =
    pathlib
    argparse
package_dir =
    = src
packages = remove_unnecessary_files
python_requires = >=3.9

[options.entry_points]
console_scripts =
    everest-coverage-remove-unnecessary-files = remove_unnecessary_files.remove_unnecessary_files:main

