load("@rules_python//python:defs.bzl", "py_library")
load("@everest-utils//:requirements.bzl", "requirement")

py_library(
    name = "everest-testing",
    srcs = glob(["src/**/*.py"]),
    deps = [
        requirement("pytest"),
        requirement("pytest-asyncio"),
        requirement("python-dateutil"),
        requirement("paho-mqtt"),
        requirement("pyftpdlib"),
        requirement("ocpp"),
        requirement("websockets"),
        requirement("pyOpenSSL"),
        requirement("pyyaml"),
    ],
    imports = ["src"],
    visibility = ["//visibility:public"],
)